--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "mongodb": "^5.0.1",
     "puppeteer": "^13.7.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.19.2"
