--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "mongodb": "^5.0.1",
-    "puppeteer": "^13.7.0",
+    "playwright-firefox": "^1.32.3",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.19.2"
   }
